fixing spacing

--- a/main_page/main_style.css
+++ b/main_page/main_style.css
@@ -34,7 +34,7 @@ body{
     position: fixed;
     font-weight: 600;
     font-size: 64pt;
-    left: 1%;
+    left: 5%;
 }
 .search-container{
     display: flex;
@@ -44,7 +44,7 @@ body{
     align-items: center;
     position: fixed;
     bottom: 10%;
-    left: 1.5%;
+    left: 5%;
     border-radius: 20pt;
     justify-content: space-between;
 }
@@ -65,7 +65,7 @@ body{
     float: right;
     background-color: #3C9EB6;
     border: none;
-    width: 16%;
+    width: 15%;
     height: 100%;
     border-radius: 0pt 20pt 20pt 0pt;
     cursor: pointer;
